Fixed: Main page on mobile phone (screen overflow for cd-words-wrapper)

--- a/www/assets/css/slider.css
+++ b/www/assets/css/slider.css
@@ -35,6 +35,7 @@ Primary style
   overflow: hidden;
   vertical-align: top;
   width: auto!important;
+  max-width: 95vw!important;
 }
 .cd-headline.slide b {
   opacity: 0;
